--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@stripe/stripe-js": "^8.6.4",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.29.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
     "react": "^19.2.0",
@@ -32,10 +33,13 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
 }
