--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.20",
     "@fullcalendar/daygrid": "^6.1.20",
     "@fullcalendar/react": "^6.1.20",
     "@fullcalendar/timegrid": "^6.1.20",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "easymde": "^2.20.0",
     "framer-motion": "^12.29.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
@@ -26,7 +29,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^4.0.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
