--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
     "react": "^19.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
