--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^7.0.12",
+    "resend": "^6.9.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.3",
     "stripe": "^20.2.0",
