Homepage Layout and animation - Fonts imports through npm instead of cdn - Toast notifications with close buttons - Fixing Mail sent with order details - struggling to fix dark mode behaviour - enhanced settingsmanagement for app's appearance - testing deployment with more data through seed.js

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -7,6 +7,9 @@ npm-debug.log
 # Environment Variables should NEVER be published
 .env
 
+# Seed data
+seeds/
+
 # macOS
 .DS_Store
 .AppleDouble
@@ -17,7 +20,7 @@ Thumbs.db
 Thumbs.db:encryptable
 ehthumbs.db
 *.lnk
-/scripts
+/scripts/
 
 # VS Code
 .vscode/*
