--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.2",
     "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-datepicker": "^9.1.0",
