--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^4.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
     "react-simplemde-editor": "^5.2.0",
     "socket.io-client": "^4.8.3",
