protected seed passwords

--- a/server/.env.example
+++ b/server/.env.example
@@ -27,3 +27,8 @@ R2_PUBLIC_URL=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+# Seed Data
+SEED_PASSWORD=Password1234567!!
+SEED_ADMIN_PASSWORD=Admin1234567!!
+SEED_SUPERADMIN_PASSWORD=SuperAdmin1234567!!
