--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 docs/
 scripts
 my-app
+
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+package-lock.json
