--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 docs/
 scripts
 my-app
+api/
 
 # Dependencies
 node_modules
@@ -26,4 +27,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-package-lock.json
+deploy.sh
